--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
     "mongoose": "^8.11.0",
