--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
     "mongoose": "^8.11.0",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9"
   }
 }
