--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@ SMTP_FROM = infinityops03@gmail.com
 STMP_USER = infinityops03@gmail.com
 SMTP_PASWORD = lhqk wbrv ljxz ldqt
 
+CSRF_SECRET = lhsdhgjsg53458734jnvjkfdshgy7345b
+
 SESSION_SECRET=fdsfmdjLKGSFGJKJET4352834543GNFH48953HTlkjfios.gfsjgfeger/griwtrejfodasffgg
 SESSION_EXPIRY = 7d
 
