--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
-  "author": "",
+  "author": "karan",
   "license": "ISC",
   "description": "",
   "dependencies": {
