--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.4",
+    "flowbite": "^3.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.3.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.1",
     "tailwindcss": "^4.0.14"
   },
