--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_API_URL = "http://localhost:5000"
 VITE_API_PORT = 5000
+VITE_FCM_KEY = "BFldkQ5of9x-es4x8Y4jB-Vk7e7AvsMFlzGyGd4FtLV6uljF3YSQ2wx0f0sfp6aXQP-WnX_T1So9xR8PEd5tvqY"
